tests/paczka1/fuzzy1/59351318.err
Error in line 25: T6n2nWYX A100 20,3
Error in line 31: T6n2nWYX A585 66,8
Error in line 34: 9Sl S886 4,57
Error in line 32: T6n2nWYX A100 39,4
